force-app/main/default/objects/Gasto_comida__c/Gasto_comida__c.object-meta.xml
<CustomObject>
    <description>Incluye salidas a comer y delivery</description>
    <label>Gasto comida</label>
    <nameField>
        <displayFormat>Gasto Cod - {00000}</displayFormat>
        <label>Gasto comidas Cod</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gastos comidas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>