force-app/main/default/objects/Gasto_comida__c/fields/Articulo__c.field-meta.xml
<CustomField>
    <fullName>Articulo__c</fullName>
    <label>Artículo</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>