force-app/main/default/objects/Gasto_comida__c/fields/Fecha_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_compra__c</fullName>
    <label>Fecha de compra</label>
    <required>true</required>
    <type>Date</type>
</CustomField>