force-app/main/default/objects/Gasto_comida__c/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proveedor</label>
    <referenceTo>Proveedor__c</referenceTo>
    <relationshipLabel>Gastos comidas</relationshipLabel>
    <relationshipName>Gastos_comidas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>